--- a/reactprj/index.html
+++ b/reactprj/index.html
@@ -9,6 +9,7 @@
   <body>
     <div id="root"></div>
     <script src="src/assets/keyaccess.js"></script>
+    <script src="https://craig.global.ssl.fastly.net/js/mousetrap/mousetrap.min.js?a4098"></script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
